# research

./: README.md
2019/aiortc_for_camera_streaming/: README.rst
2022/1.tonic+flutter+grpc/flutter_client/: README.md  pubspec.yaml
2022/1.tonic+flutter+grpc/flutter_client/android/app/: build.gradle
2022/1.tonic+flutter+grpc/flutter_client/ios/Runner.xcodeproj/: project.pbxproj
2022/1.tonic+flutter+grpc/flutter_client/lib/: main.dart
2022/1.tonic+flutter+grpc/flutter_client/test/: widget_test.dart
2022/1.tonic+flutter+grpc/protocols/: helloworld.proto
2022/1.tonic+flutter+grpc/rust_service/: Cargo.toml  build.rs
2022/1.tonic+flutter+grpc/rust_service/src/: server.rs
2022/2.houseclub_test/: README.md  pubspec.yaml
2022/2.houseclub_test/lib/: main.dart
2022/3.voice_transfering/: generate_code.sh
2022/3.voice_transfering/flutter_client/: pubspec.yaml
2022/3.voice_transfering/flutter_client/android/app/: build.gradle
2022/3.voice_transfering/flutter_client/android/app/src/main/: AndroidManifest.xml
2022/3.voice_transfering/flutter_client/ios/Runner/: Info.plist
2022/3.voice_transfering/flutter_client/lib/: example.dart  main.dart  utils.dart
2022/3.voice_transfering/flutter_client/lib/store/: global_controller_variables.dart  grpc_controller.dart  microphone_and_speaker_controller.dart  microphone_controller.dart
2022/3.voice_transfering/flutter_client/test/: widget_test.dart
2022/3.voice_transfering/flutter_client/web/: index.html
2022/3.voice_transfering/protocols/: helloworld.proto
2022/3.voice_transfering/rust_service/: Cargo.toml  README.md
2022/3.voice_transfering/rust_service/src/: server.rs
2022/4.chat_room/: README.md  generate_code.sh
2022/4.chat_room/flutter_client/: README.md  pubspec.yaml
2022/4.chat_room/flutter_client/android/app/: build.gradle
2022/4.chat_room/flutter_client/lib/: main.dart  utils.dart
2022/4.chat_room/flutter_client/lib/models/: room.dart  user.dart
2022/4.chat_room/flutter_client/lib/pages/room/: my_chat_room_page.dart
2022/4.chat_room/flutter_client/lib/pages/room/widgets/: my_room_profile.dart
2022/4.chat_room/flutter_client/lib/store/: global_controller_variables.dart  grpc_controller.dart  microphone_and_speaker_controller.dart  variable_controller.dart
2022/4.chat_room/flutter_client/lib/widgets/: round_button.dart  round_image.dart
2022/4.chat_room/protocols/: helloworld.proto
2022/4.chat_room/rust_service/: Cargo.toml
2022/4.chat_room/rust_service/src/: example.txt  server.rs  utils.rs
2022/5.auth/LiveKit/: README.md  livekit.yaml
2022/5.auth/LiveKit/simple_video_chat_room_demo/: README.md  pubspec.yaml
2022/5.auth/LiveKit/simple_video_chat_room_demo/android/app/: build.gradle
2022/5.auth/LiveKit/simple_video_chat_room_demo/android/app/src/debug/: AndroidManifest.xml
2022/5.auth/LiveKit/simple_video_chat_room_demo/ios/Runner/: Info.plist
2022/5.auth/LiveKit/simple_video_chat_room_demo/ios/Runner.xcodeproj/: project.pbxproj
2022/5.auth/LiveKit/simple_video_chat_room_demo/lib/: config.dart  main.dart  utils.dart  variable_controller.dart
2022/5.auth/LiveKit/simple_video_chat_room_demo/lib/pages/: connect_page.dart  room.dart
2022/5.auth/LiveKit/simple_video_chat_room_demo/lib/widgets/: controls.dart  no_video.dart  participant.dart
2022/5.auth/LiveKit/simple_video_chat_room_demo/test/: widget_test.dart
2022/5.auth/LiveKit/simple_video_chat_room_demo/web/: index.html  manifest.json
2022/5.auth/LiveKit/simple_video_chat_room_demo/windows/: CMakeLists.txt
2022/5.auth/LiveKit/simple_video_chat_room_demo/windows/runner/: Runner.rc  main.cpp
2022/5.auth/python_jwt_auth_example/: README.md  auth.py  main.py  models.py  pyproject.toml  test.py  trying.ipynb
2022/5.auth/python_user_system/: .gitignore  README.md  pyproject.toml
2022/5.auth/python_user_system/src/: auth.py  config.py  main.py  models.py  utils.py
2022/5.auth/python_user_system/src/database/: sqlite.py
2022/5.auth/python_user_system/src/test/: entry.py  test_database.py  test_restful_api.py  test_user_system.py
aiortc_for_camera_streaming/: README.rst
(+2 files in other folders)
